Communities (#10)
* Stub Out Community Creation

* Stub out mutation hooks

* Create New Communities in Database

* Display Communities in List

* Add Getting of Community and Redirect on Creation

* Run Swagger Docs

* Add Docs For README

* Add Page Title to Communities
