# docs/swagger.json
@@ -43,21 +43,56 @@
                 }
             }
         },
+        "/api/v1/communities": {
+            "post": {
+                "description": "This will create a new Community and assign the creator as the only memberof that community",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/vnd.api+json"
+                ],
+                "tags": [
+                    "Communities"
+                ],
+                "summary": "Creates a new Community",
+                "operationId": "CreateCommunity",
+                "parameters": [
+                    {
+                        "description": "New Community Information",
+                        "name": "requestBody",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/server.CreateCommunityRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/server.SuccessResponse-data_Community"
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/messages/groups": {
             "get": {
                 "produces": [
                     "application/vnd.api+json"
                 ],
                 "tags": [
-                    "Messages"
+                    "Communities"
                 ],
-                "summary": "Retrieves the Message Groups that a User has access to",
-                "operationId": "GetUserMessageGroups",
+                "summary": "Retrieves the Community of a given ID",
+                "operationId": "GetUserCommunityById",
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/server.SuccessResponse-server_GetGroupsResponse"
+                            "$ref": "#/definitions/server.SuccessResponse-data_Community"
                         }
                     },
                     "500": {
@@ -324,6 +359,23 @@
                 }
             }
         },
+        "data.Community": {
+            "type": "object",
+            "properties": {
+                "_id": {
+                    "type": "string"
+                },
+                "created_at": {
+                    "type": "string"
+                },
+                "is_public": {
+                    "type": "boolean"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
         "data.CurrentWeatherUpstreamResponse": {
             "type": "object",
             "properties": {
@@ -558,6 +610,17 @@
                 }
             }
         },
+        "server.CreateCommunityRequest": {
+            "type": "object",
+            "properties": {
+                "is_public": {
+                    "type": "boolean"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
         "server.ErrorResponse-server_GenericError": {
             "type": "object",
             "properties": {
@@ -666,6 +729,25 @@
             "type": "object",
             "properties": {
                 "data": {},
+                "includes": {
+                    "type": "array",
+                    "items": {}
+                },
+                "links": {
+                    "type": "object",
+                    "additionalProperties": {
+                        "$ref": "#/definitions/server.Link"
+                    }
+                },
+                "metadata": {}
+            }
+        },
+        "server.SuccessResponse-data_Community": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "$ref": "#/definitions/data.Community"
+                },
                 "includes": {
                     "type": "array",
                     "items": {}
